--- a/build.gradle
+++ b/build.gradle
@@ -32,13 +32,14 @@ test.environment([
         "SPRING_DATASOURCE_URL": testDbUrl,
 ])
 
-flyway {
+/*flyway {
     url = developmentDbUrl
     user = "tracker"
     password = ""
     locations = ["filesystem:databases/tracker/migrations"]
-}
+}*/
 
+/*
 task testMigrate(type: FlywayMigrateTask) {
     url = testDbUrl
-}
+}*/
