--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -82,7 +82,7 @@ jobs:
       path: pal-tracker-artifacts/pal-tracker-*.jar
       environment_variables:
         WELCOME_MESSAGE: "Hello from the review environment"
-
+        SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/tracker_test?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 - name: deploy-production
   plan:
   - get: pal-tracker
