--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ springBoot {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
+    compile("org.springframework.boot:spring-boot-starter-security")
 /*
     compile("org.springframework.boot:spring-boot-starter-jdbc")
 */
